# wine-quality-prediction

./: .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  Dockerfile.streamlit  README.md  docker-compose.airflow.yml  monitoring_report.html  pyproject.toml
.dvc/: config
.github/workflows/: deploy-app.yml  deploy-infra.yml  deploy.yml
airflow_dags/: wine_quality_pipeline.py
app/: main.py  model_prediction.py
app/model/: .gitignore  red_wine_model.pkl  red_wine_model.pkl.dvc
data/: .gitignore  red_wine_quality.csv.dvc
monitoring/: monitoring.py
scripts/: download_data.py  train_model.py
streamlit/: app.py  app.tf
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
tests/: test_main.py  test_model_prediction.py
