[project]
name = "wine-quality-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Flavian Reignault",email = "flavian.reignault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mlflow (>=2.20.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "evidently (>=0.6.1,<0.7.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "dvc-gs (>=3.0.1,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "app", from = "." }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
dvc = "^3.59.0"
